--- a/index.html
+++ b/index.html
@@ -4,7 +4,94 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weather App</title>
+    <!-- ADD THIS BACK IN SANDBOX <link rel="stylesheet" href="src/styles.css" /> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@100;200;300;400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <title>Weather</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="capsule">
+        <br />
+        <!--Search bar-->
+        <div class="search-area">
+          <form id="search-city-form">
+            <input
+              type="text"
+              placeholder="search for a city"
+              autocomplete="off"
+              autofocus="on"
+              id="search-area"
+            />
+            <input type="submit" value="search" id="search-area-button" />
+          </form>
+        </div>
+        <!--End of search area div-->
+        <h1>
+          <span id="current-city"></span>
+          <div class="current-temp">
+            <span id="current-temp"></span>
+          </div>
+        </h1>
+
+        <div class="current-weather-holder">
+          <div class="current-weather-emoji">🌞</div>
+          <div class="current-weather">
+            <span class="todays-date">sunday 5:30pm</span>
+            <!--Need date and time to change based on location searched-->
+            <br />
+            high <strong><span id="current-high"></span></strong> | low
+            <strong><span id="current-low"></span></strong
+            ><button id="current-loc-button">current location</button>
+          </div>
+        </div>
+        <!--End of .current-weather-holder-->
+        <br />
+        <div class="future-weather-days">
+          <div class="row">
+            <div class="col-2">
+              mon
+              <div class="future-weather-emojis">⛅️</div>
+              <div class="future-weather-high-low">82° | 76°</div>
+            </div>
+            <div class="col-2">
+              tues
+              <div class="future-weather-emojis">🌞</div>
+              <div class="future-weather-high-low">83° | 76°</div>
+            </div>
+            <div class="col-2">
+              wed
+              <div class="future-weather-emojis">🌧️</div>
+              <div class="future-weather-high-low">79° | 75°</div>
+            </div>
+            <div class="col-2">
+              thurs
+              <div class="future-weather-emojis">⛈️</div>
+              <div class="future-weather-high-low">83° | 75°</div>
+            </div>
+            <div class="col-2">
+              fri
+              <div class="future-weather-emojis">🍃</div>
+              <div class="future-weather-high-low">82° | 77°</div>
+            </div>
+          </div>
+        </div>
+        <!--End of .future-weather-days-->
+        <!--<button id="temp-converter">switch to celcius</button> OLD TEMP CONVERTER BUTTON-->
+      </div>
+      <!--End of .capsule-->
+    </div>
+    <!--End of container-->
+  </body>
 </html>
