Added link to GitHub

--- a/index.html
+++ b/index.html
@@ -93,5 +93,6 @@
       <!--End of .capsule-->
     </div>
     <!--End of container-->
+    <a href="https://github.com/soph9819/weather-app">GitHub</a>
   </body>
 </html>
