--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="styles.css" />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <title>Weather</title>
   </head>
@@ -94,5 +95,6 @@
     </div>
     <!--End of container-->
     <a href="https://github.com/soph9819/weather-app">GitHub</a>
+    <script src="script.js"></script>
   </body>
 </html>
