Added background color and moved credits below container

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <!--End of search area div-->
         <h1>
           <span id="current-city"></span>
+
           <div class="current-temp">
             <span id="current-temp"></span>
           </div>
@@ -95,7 +96,9 @@
       <!--End of .capsule-->
     </div>
     <!--End of container-->
-    <a href="https://github.com/soph9819/weather-app">GitHub</a>
+    <span class="credits"
+      ><a href="https://github.com/soph9819/weather-app">GitHub</a></span
+    >
     <script src="script.js"></script>
   </body>
 </html>
