Updating credits content and placement, adjusted max and min width

--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
     </div>
     <!--End of container-->
     <span class="credits"
-      ><a href="https://github.com/soph9819/weather-app">GitHub</a></span
+      ><a href="https://github.com/soph9819/weather-app">GitHub</a> by Sophie
+      Fawkes</span
     >
     <script src="script.js"></script>
   </body>
