Styled credits again

--- a/index.html
+++ b/index.html
@@ -97,8 +97,10 @@
     </div>
     <!--End of container-->
     <span class="credits"
-      ><a href="https://github.com/soph9819/weather-app">GitHub</a> by Sophie
-      Fawkes</span
+      ><small
+        ><a href="https://github.com/soph9819/weather-app">View Code</a> by
+        Sophie Fawkes</small
+      ></span
     >
     <script src="script.js"></script>
   </body>
