Moved weather conditions, adjusted spacing, moved current location button up

--- a/index.html
+++ b/index.html
@@ -57,14 +57,23 @@
             <br />
             high <strong><span id="current-high"></span></strong> | low
             <strong><span id="current-low"></span></strong>
+
             <br />
-            <span id="wind-speed"><strong>wind speed: </strong></span>
+            <span id="temp-conversion-button">°C | <strong>°F</strong></span>
+
             <br />
-            <button id="current-loc-button">current location</button>
+            <button id="current-loc-button">find current location</button>
           </div>
         </div>
-
         <!--End of .current-weather-holder-->
+        <span class="current-weather-conditions">
+          <ul>
+            <li id="wind-speed">wind: 28 mph</li>
+            <li id="precipitation">precipitation: 28%</li>
+            <li id="humidity">humidity: 83%</li>
+          </ul>
+        </span>
+        <!--End of .current-weather-conditions-->
         <br />
         <div class="future-weather-days">
           <div class="row">
