Added current weatherCondition functionality

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
           <div class="current-temp">
             <span id="current-temp"></span>
-            <span id="conditions">sunny</span>
+            <span id="current-condition"></span>
           </div>
         </h1>
 
