Moved currentCondition position, then swapped with wind speed position

--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
 
           <div class="current-temp">
             <span id="current-temp"></span>
-            <span id="current-condition"></span>
           </div>
         </h1>
 
@@ -68,8 +67,8 @@
         <!--End of .current-weather-holder-->
         <span class="current-weather-conditions">
           <ul>
+            <li id="current-condition"></li>
             <li id="wind-speed">wind: 28 mph</li>
-            <li id="precipitation">precipitation: 28%</li>
             <li id="humidity">humidity: 83%</li>
           </ul>
         </span>
