Added wind speed and humidity functionality

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         <span class="current-weather-conditions">
           <ul>
             <li id="current-condition"></li>
-            <li id="wind-speed">wind: 28 mph</li>
-            <li id="humidity">humidity: 83%</li>
+            <li id="wind-speed"></li>
+            <li id="humidity"></li>
           </ul>
         </span>
         <!--End of .current-weather-conditions-->
