Added emoji functionality based on current weather conditions

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
         </h1>
 
         <div class="current-weather-holder">
-          <div class="current-weather-emoji">🌞</div>
+          <div class="current-weather-emoji">
+            <img src="" alt="" id="current-weather-icon" />
+          </div>
           <div class="current-weather">
             <span class="todays-date">sunday 5:30pm</span>
 
