Adjusted boldness of current temp, adjust styling of search bar, adjusted current loc button and search button to fit with new styling

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <span id="temp-conversion-button">°C | <strong>°F</strong></span>
 
             <br />
-            <button id="current-loc-button">find current location</button>
+            <button id="current-loc-button" class="btn btn-primary">📍</button>
           </div>
         </div>
         <!--End of .current-weather-holder-->
