Changed time/date functionality based on location

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <img src="" alt="" id="current-weather-icon" />
           </div>
           <div class="current-weather">
-            <span class="todays-date">sunday 5:30pm</span>
+            <span class="todays-date"></span>
 
             <!--Need date and time to change based on location searched-->
             <br />
