Removed "°" from currentTemp variable to allow for calculations, added basic unit conversion functionality

--- a/index.html
+++ b/index.html
@@ -42,8 +42,12 @@
         <h1>
           <span id="current-city"></span>
 
-          <div class="current-temp">
+          <div class="current-temp-holder">
             <span id="current-temp"></span>
+            <span class="units"
+              ><a href="#" id="celsius-link" class="active">°C</a> |
+              <a href="#" id="fahrenheit-link">°F</a></span
+            >
           </div>
         </h1>
 
@@ -60,8 +64,7 @@
             <strong><span id="current-low"></span></strong>
 
             <br />
-            <span id="temp-conversion-button">°C | <strong>°F</strong></span>
-
+            🤍
             <br />
             <button id="current-loc-button" class="btn btn-primary">📍</button>
           </div>
