Added comment for future fixes, added degree sign for current low and high

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 
             <!--Need date and time to change based on location searched-->
             <br />
-            high <strong><span id="current-high"></span></strong> | low
-            <strong><span id="current-low"></span></strong>
+            high <strong><span id="current-high"></span>°</strong> | low
+            <strong><span id="current-low"></span>°</strong>
 
             <br />
             🤍
