Removed all instances of temperature conversion (As per the lesson), added forecast for initial location upon opening the app, attempting to adjust time and date by searched location

--- a/index.html
+++ b/index.html
@@ -43,11 +43,7 @@
           <span id="current-city"></span>
 
           <div class="current-temp-holder">
-            <span id="current-temp"></span>
-            <span class="units"
-              ><a href="#" id="celsius-link" class="active">°C</a> |
-              <a href="#" id="fahrenheit-link">°F</a></span
-            >
+            <span id="current-temp"></span>°C
           </div>
         </h1>
 
@@ -60,11 +56,9 @@
 
             <!--Need date and time to change based on location searched-->
             <br />
-            high <strong><span id="current-high"></span>°</strong> | low
-            <strong><span id="current-low"></span>°</strong>
 
             <br />
-            🤍
+
             <br />
             <button id="current-loc-button" class="btn btn-primary">📍</button>
           </div>
