Changed °C to °F, removed °F from index.html and instead had it appear as currentTemp updates

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <span id="current-city"></span>
 
           <div class="current-temp-holder">
-            <span id="current-temp"></span>°C
+            <span id="current-temp"></span>
           </div>
         </h1>
 
