Adjusted background and text positioning. Added text: "Days Ahead" above forecasted temperatures

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             <button id="current-loc-button" class="btn btn-primary">📍</button>
           </div>
         </div>
+        <span class="days-ahead">days ahead</span>
         <!--End of .current-weather-holder-->
         <span class="current-weather-conditions">
           <ul>
@@ -71,8 +72,8 @@
             <li id="humidity"></li>
           </ul>
         </span>
+
         <!--End of .current-weather-conditions-->
-        <br />
 
         <div class="future-weather-days" id="forecast"></div>
 
