Added "best viewed in Chrome"

--- a/index.html
+++ b/index.html
@@ -92,6 +92,11 @@
         >
       </center></span
     >
+    <span class="browser-notes"
+      ><center>
+        <small> best viewed in chrome</small>
+      </center></span
+    >
     <script src="script.js"></script>
   </body>
 </html>
